--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <body>
 
   <!-- Your Logo (replace with your actual logo file path) -->
-  <img id="logo" src="images/logo.png" alt="Matt Scianna Logo">
+ <img src="logo.png" alt="Matt Scianna Logo" style="width: 150px; height: auto; margin-bottom: 20px;">
 
   <h1>MATT SCIANNA</h1>
   <h2>FOOTBALL JERSEYS</h2>
