--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <body>
 
   <!-- Your Logo (replace with your actual logo file path) -->
- https://github.com/mattscianna/mattscianna/blob/d5cd4343da9d35c23406c0a95a73a27aa71dbb4f/Copy_of_Logo_1-2-removebg-preview.png
+<img id="logo" src="https://raw.githubusercontent.com/mattscianna/mattscianna/main/logo.png?raw=true" alt="Matt Scianna Logo" style="width: 200px; height: auto; margin-bottom: 20px;">
 
   <h1>MATT SCIANNA</h1>
   <h2>FOOTBALL JERSEYS</h2>
