--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <body>
 
   <!-- Your Logo (replace with your actual logo file path) -->
-<img id="logo" src="https://raw.githubusercontent.com/mattscianna/mattscianna/main/logo.png?raw=true" alt="Matt Scianna Logo" style="width: 200px; height: auto; margin-bottom: 20px;">
+<img id="logo" src="https://github.com/mattscianna/mattscianna/blob/Main/Copy_of_Logo_1-2-removebg-preview.png?raw=true" alt="Matt Scianna Logo" style="width: 200px; height: auto; margin-bottom: 20px;">
 
   <h1>MATT SCIANNA</h1>
   <h2>FOOTBALL JERSEYS</h2>
