--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 
     h1 {
       font-family: 'Cardo', serif;
-      font-size: 5vw; /* Scales dynamically with screen size */
+      font-size: 4vw; /* Reduced size for desktop */
       margin-bottom: 10px;
     }
 
     h2 {
       font-family: 'Jersey25', sans-serif;
-      font-size: 6vw; /* Scales dynamically with screen size */
+      font-size: 5vw; /* Reduced size for desktop */
       margin-bottom: 40px;
       letter-spacing: 2px;
     }
@@ -72,13 +72,13 @@
     }
 
     .time-section .number {
-      font-size: 10vw; /* Dynamically scales with screen size */
+      font-size: 5vw; /* Adjusted for a more reasonable size on all devices */
       font-weight: bold;
       margin-bottom: 10px;
     }
 
     .time-section .label {
-      font-size: 4vw; /* Smaller label size for readability */
+      font-size: 2vw; /* Slightly smaller font for labels */
       letter-spacing: 1px;
       margin-top: 5px;
     }
@@ -86,38 +86,38 @@
     /* Mobile adjustments for screens smaller than 768px */
     @media (max-width: 768px) {
       h1 {
-        font-size: 8vw;
-      }
-
-      h2 {
         font-size: 10vw;
       }
 
+      h2 {
+        font-size: 12vw;
+      }
+
       .time-section .number {
-        font-size: 15vw; /* Increase for better readability on small screens */
+        font-size: 10vw; /* More appropriate size for mobile devices */
       }
 
       .time-section .label {
-        font-size: 5vw; /* More appropriate size for mobile devices */
+        font-size: 3vw; /* More appropriate size for mobile devices */
       }
     }
 
     /* Further adjustments for very small screens like phones in portrait mode */
     @media (max-width: 480px) {
       h1 {
-        font-size: 12vw;
-      }
-
-      h2 {
         font-size: 14vw;
       }
 
+      h2 {
+        font-size: 16vw;
+      }
+
       .time-section .number {
-        font-size: 18vw; /* Larger for readability */
+        font-size: 14vw; /* Larger for readability */
       }
 
       .time-section .label {
-        font-size: 6vw; /* Larger for readability */
+        font-size: 4vw; /* Larger for readability */
       }
     }
 
