--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     h2 {
       font-family: 'Jersey25', sans-serif;
-      font-size: 7vw; /* Adjusted font size for better scaling */
+      font-size: 5vw; /* Reduced the font size of FOOTBALL JERSEYS */
       margin-bottom: 40px;
       letter-spacing: 2px;
     }
@@ -56,8 +56,8 @@
 
     #countdown {
       display: flex;
-      gap: 30px;
       justify-content: center;
+      gap: 20px;
       margin-top: 20px;
       flex-wrap: wrap;
       align-items: center;
@@ -72,13 +72,13 @@
     }
 
     .time-section .number {
-      font-size: 6vw; /* Adjusted font size for scaling */
+      font-size: 5vw; /* Adjusted font size for countdown numbers */
       font-weight: bold;
       margin-bottom: 10px;
     }
 
     .time-section .label {
-      font-size: 3vw; /* Adjusted font size for scaling */
+      font-size: 2vw; /* Adjusted font size for labels */
       letter-spacing: 1px;
       margin-top: 5px;
     }
@@ -90,15 +90,15 @@
       }
 
       h2 {
-        font-size: 13vw;
+        font-size: 12vw; /* Adjusted FOOTBALL JERSEYS font size */
       }
 
       .time-section .number {
-        font-size: 12vw;
+        font-size: 12vw; /* Adjusted countdown numbers */
       }
 
       .time-section .label {
-        font-size: 4vw;
+        font-size: 5vw; /* Adjusted countdown labels */
       }
 
       #logo {
