--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
 
     h2 {
       font-family: 'Jersey25', sans-serif;
-      font-size: 5vw; /* Reduced the font size of FOOTBALL JERSEYS */
+      font-size: 4.5vw; /* Reduced the font size of FOOTBALL JERSEYS */
       margin-bottom: 40px;
       letter-spacing: 2px;
     }
 
     /* Styling for the logo */
     #logo {
-      width: 250px; /* Adjusted width for better proportion */
+      width: 200px; /* Adjusted width for better proportion */
       height: auto;
       margin-bottom: 20px;
     }
@@ -90,19 +90,19 @@
       }
 
       h2 {
-        font-size: 12vw; /* Adjusted FOOTBALL JERSEYS font size */
+        font-size: 9vw; /* Further reduced FOOTBALL JERSEYS font size */
       }
 
       .time-section .number {
-        font-size: 12vw; /* Adjusted countdown numbers */
+        font-size: 10vw; /* Adjusted countdown numbers for mobile */
       }
 
       .time-section .label {
-        font-size: 5vw; /* Adjusted countdown labels */
+        font-size: 4vw; /* Adjusted countdown labels */
       }
 
       #logo {
-        width: 150px; /* Smaller logo on mobile */
+        width: 180px; /* Slightly larger logo on mobile */
       }
     }
 
@@ -117,7 +117,7 @@
       }
 
       .time-section .number {
-        font-size: 15vw;
+        font-size: 14vw; /* Adjusted countdown numbers */
       }
 
       .time-section .label {
@@ -125,7 +125,7 @@
       }
 
       #logo {
-        width: 120px; /* Even smaller logo for smaller screens */
+        width: 160px; /* Adjusted logo size on smaller screens */
       }
     }
 
