--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <!-- Importing Cardo font from Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet">
 
-  <!-- Jersey 25 font -->
   <style>
+    /* Use @font-face to load the Jersey 25 font (upload the font file to your repo) */
     @font-face {
       font-family: 'Jersey25';
-      src: url('fonts/jersey-25.ttf') format('truetype');
+      src: url('fonts/jersey-25.ttf') format('truetype'); /* Make sure the path is correct */
       font-weight: normal;
       font-style: normal;
     }
@@ -29,111 +29,112 @@
       margin: 0;
       text-transform: uppercase;
       text-align: center;
-      padding: 20px;
-      box-sizing: border-box;
     }
 
     h1 {
       font-family: 'Cardo', serif;
-      font-size: 6vw; /* Adjusted font size for better scaling */
+      font-size: 4vw;
       margin-bottom: 10px;
-      margin-top: 20px;
     }
 
+    /* FOOTBALL JERSEYS in Jersey 25 font */
     h2 {
       font-family: 'Jersey25', sans-serif;
-      font-size: 4.5vw; /* Reduced the font size of FOOTBALL JERSEYS */
+      font-size: 3.5vw;
       margin-bottom: 40px;
       letter-spacing: 2px;
     }
 
     /* Styling for the logo */
     #logo {
-      width: 200px; /* Adjusted width for better proportion */
+      width: 150px; /* Adjust width as needed */
       height: auto;
       margin-bottom: 20px;
     }
 
     #countdown {
       display: flex;
-      justify-content: center;
       gap: 20px;
       margin-top: 20px;
-      flex-wrap: wrap;
-      align-items: center;
-      flex-direction: row;
+      justify-content: center;
     }
 
     .time-section {
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: center;
     }
 
     .time-section .number {
-      font-size: 5vw; /* Adjusted font size for countdown numbers */
+      font-size: 4vw;
       font-weight: bold;
       margin-bottom: 10px;
     }
 
     .time-section .label {
-      font-size: 2vw; /* Adjusted font size for labels */
+      font-size: 1.5vw;
       letter-spacing: 1px;
       margin-top: 5px;
     }
 
-    /* Mobile adjustments for screens smaller than 768px */
+    /* Responsive Design for Mobile Devices */
     @media (max-width: 768px) {
       h1 {
-        font-size: 12vw;
+        font-size: 7vw;
       }
 
       h2 {
-        font-size: 9vw; /* Further reduced FOOTBALL JERSEYS font size */
-      }
-
-      .time-section .number {
-        font-size: 10vw; /* Adjusted countdown numbers for mobile */
-      }
-
-      .time-section .label {
-        font-size: 4vw; /* Adjusted countdown labels */
-      }
-
-      #logo {
-        width: 180px; /* Slightly larger logo on mobile */
-      }
-    }
-
-    /* Further adjustments for very small screens like phones in portrait mode */
-    @media (max-width: 480px) {
-      h1 {
-        font-size: 15vw;
-      }
-
-      h2 {
-        font-size: 18vw;
-      }
-
-      .time-section .number {
-        font-size: 14vw; /* Adjusted countdown numbers */
-      }
-
-      .time-section .label {
         font-size: 5vw;
       }
 
+      #countdown {
+        gap: 10px;
+      }
+
+      .time-section .number {
+        font-size: 8vw;
+      }
+
+      .time-section .label {
+        font-size: 3vw;
+      }
+
       #logo {
-        width: 160px; /* Adjusted logo size on smaller screens */
+        width: 120px;
       }
     }
 
+    /* Mobile Adjustments for Smaller Devices */
+    @media (max-width: 480px) {
+      h1 {
+        font-size: 8vw;
+      }
+
+      h2 {
+        font-size: 6vw;
+      }
+
+      #countdown {
+        gap: 5px;
+      }
+
+      .time-section .number {
+        font-size: 10vw;
+      }
+
+      .time-section .label {
+        font-size: 4vw;
+      }
+
+      #logo {
+        width: 100px;
+      }
+    }
   </style>
 </head>
 <body>
 
-  <!-- Your Logo (ensure the image path is correct) -->
+  <!-- Your Logo (replace with your actual logo file path) -->
   <img id="logo" src="https://github.com/mattscianna/mattscianna/blob/Main/Copy_of_Logo_1-2-removebg-preview.png?raw=true" alt="Matt Scianna Logo">
 
   <h1>MATT SCIANNA</h1>
