--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
 
     /* Styling for the logo */
     #logo {
-      width: 150px; /* Adjust width as needed */
+      width: 180px; /* Increased logo size */
       height: auto;
       margin-bottom: 20px;
     }
 
     #countdown {
       display: flex;
-      gap: 20px;
+      gap: 15px;
       margin-top: 20px;
       justify-content: center;
     }
@@ -66,13 +66,14 @@
     }
 
     .time-section .number {
-      font-size: 4vw;
+      font-size: 3.5vw;
       font-weight: bold;
-      margin-bottom: 10px;
+      margin-bottom: 5px;
     }
 
     .time-section .label {
-      font-size: 1.5vw;
+      font-size: 1.2vw;
+      color: black; /* Set the label color to black */
       letter-spacing: 1px;
       margin-top: 5px;
     }
@@ -92,7 +93,7 @@
       }
 
       .time-section .number {
-        font-size: 8vw;
+        font-size: 7vw; /* Slightly smaller on mobile */
       }
 
       .time-section .label {
@@ -100,7 +101,7 @@
       }
 
       #logo {
-        width: 120px;
+        width: 150px;
       }
     }
 
@@ -119,7 +120,7 @@
       }
 
       .time-section .number {
-        font-size: 10vw;
+        font-size: 9vw;
       }
 
       .time-section .label {
@@ -127,7 +128,7 @@
       }
 
       #logo {
-        width: 100px;
+        width: 130px;
       }
     }
   </style>
