--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 
     .time-section .label {
       font-size: 1.2vw;
+      font-weight: bold; /* Made the label bold */
       color: black; /* Set the label color to black */
       letter-spacing: 1px;
       margin-top: 5px;
@@ -144,19 +145,19 @@
   <div id="countdown">
     <div class="time-section">
       <div id="days" class="number">0</div>
-      <div class="label">Days</div>
+      <div class="label">D</div>
     </div>
     <div class="time-section">
       <div id="hours" class="number">0</div>
-      <div class="label">Hours</div>
+      <div class="label">H</div>
     </div>
     <div class="time-section">
       <div id="minutes" class="number">0</div>
-      <div class="label">Minutes</div>
+      <div class="label">M</div>
     </div>
     <div class="time-section">
       <div id="seconds" class="number">0</div>
-      <div class="label">Seconds</div>
+      <div class="label">S</div>
     </div>
   </div>
 
