--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     #countdown {
       display: flex;
-      gap: 15px;
+      gap: 60px; /* Increased the gap between the time sections for more space */
       margin-top: 20px;
       justify-content: center;
     }
@@ -90,7 +90,7 @@
       }
 
       #countdown {
-        gap: 10px;
+        gap: 30px; /* Decrease gap for smaller devices */
       }
 
       .time-section .number {
@@ -117,7 +117,7 @@
       }
 
       #countdown {
-        gap: 5px;
+        gap: 10px; /* Decrease gap further for very small screens */
       }
 
       .time-section .number {
