--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
     }
 
     .time-section .label {
+      font-family: 'Jersey25', sans-serif; /* Applying Jersey 25 font for D H M S */
       font-size: 1.2vw;
       font-weight: bold; /* Made the label bold */
       color: black; /* Set the label color to black */
