--- a/index.html
+++ b/index.html
@@ -29,32 +29,34 @@
       margin: 0;
       text-transform: uppercase;
       text-align: center;
+      padding-top: 0; /* Remove top padding */
+      padding-bottom: 0; /* Remove bottom padding */
     }
 
     h1 {
       font-family: 'Cardo', serif;
       font-size: 4vw;
-      margin-bottom: 10px;
+      margin-bottom: 5px; /* Reduced space between logo and text */
     }
 
     /* FOOTBALL JERSEYS in Jersey 25 font */
     h2 {
       font-family: 'Jersey25', sans-serif;
       font-size: 3.5vw;
-      margin-bottom: 40px;
+      margin-bottom: 30px; /* Adjusted to balance space */
       letter-spacing: 2px;
     }
 
     /* Styling for the logo */
     #logo {
-      width: 250px; /* Increased logo size to reduce white space on mobile */
+      width: 230px; /* Slightly increased logo size */
       height: auto;
-      margin-bottom: 10px;
+      margin-bottom: 5px; /* Reduced space between logo and title */
     }
 
     #countdown {
       display: flex;
-      gap: 80px; /* Increased the gap between the time sections */
+      gap: 80px; /* Increased gap between the time sections */
       margin-top: 20px;
       justify-content: center;
     }
@@ -103,7 +105,7 @@
       }
 
       #logo {
-        width: 220px; /* Adjust logo size */
+        width: 210px; /* Adjust logo size */
       }
     }
 
