--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     /* Use @font-face to load the Jersey 25 font (upload the font file to your repo) */
     @font-face {
       font-family: 'Jersey25';
-      src: url('fonts/jersey-25.ttf') format('truetype'); /* Make sure the path is correct */
+      src: url('fonts/jersey-25.ttf') format('truetype');
       font-weight: normal;
       font-style: normal;
     }
@@ -33,27 +33,27 @@
 
     h1 {
       font-family: 'Cardo', serif;
-      font-size: 48px;
+      font-size: 36px;
       margin-bottom: 10px;
     }
 
-    /* FOOTBALL JERSEYS in Jersey 25 font */
     h2 {
-      font-family: 'Jersey25', sans-serif; /* Apply Jersey 25 font */
-      font-size: 48px;
-      margin-bottom: 40px;
-      letter-spacing: 2px;
+      font-family: 'Jersey25', sans-serif;
+      font-size: 36px;
+      margin-bottom: 30px;
+      letter-spacing: 1px;
     }
 
     /* Styling for the logo */
     #logo {
-      width: 150px; /* Adjust width as needed */
+      width: 180px;
       margin-bottom: 20px;
     }
 
     #countdown {
       display: flex;
-      gap: 60px;
+      justify-content: center;
+      gap: 30px;
       margin-top: 20px;
     }
 
@@ -64,41 +64,85 @@
     }
 
     .time-section .number {
-      font-size: 64px;
+      font-size: 48px;
       font-weight: bold;
-      margin-bottom: 10px;
+      margin-bottom: 5px;
     }
 
     .time-section .label {
-      font-size: 18px;
-      letter-spacing: 1px;
-      margin-top: 5px;
+      font-family: 'Jersey25', sans-serif;
+      font-size: 16px;
+      color: black;
     }
 
-    /* Footer Styles */
+    /* Styles for the footer */
     footer {
-      font-family: 'Cardo', serif;
+      margin-top: 40px;
       font-size: 14px;
-      color: #8B0000;
+      color: #000000;
       text-align: center;
-      margin-top: 50px;
-      padding: 20px 0;
-      background-color: #f7f7f7;
-    }
-    footer a {
-      color: #8B0000;
-      text-decoration: none;
     }
 
-    footer a:hover {
-      text-decoration: underline;
+    footer p {
+      margin: 5px;
+    }
+
+    /* Terms & conditions box style */
+    .terms {
+      font-size: 14px;
+      margin-top: 15px;
+      color: #333;
+      text-align: center;
+    }
+
+    /* Social media icons */
+    .social-media {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 20px;
+    }
+
+    .social-media img {
+      width: 50px;
+      height: 50px;
+      cursor: pointer;
+    }
+
+    /* Media query for mobile */
+    @media (max-width: 768px) {
+      h1 {
+        font-size: 28px;
+      }
+
+      h2 {
+        font-size: 28px;
+      }
+
+      #countdown {
+        flex-direction: column;
+        gap: 15px;
+      }
+
+      .time-section .number {
+        font-size: 36px;
+      }
+
+      footer {
+        font-size: 12px;
+      }
+
+      .social-media img {
+        width: 40px;
+        height: 40px;
+      }
     }
   </style>
 </head>
 <body>
 
-  <!-- Your Logo (replace with your actual logo file path) -->
-  <img id="logo" src="https://github.com/mattscianna/mattscianna/blob/Main/Copy_of_Logo_1-2-removebg-preview.png?raw=true" alt="Matt Scianna Logo" style="width: 200px; height: auto; margin-bottom: 20px;">
+  <!-- Your Logo -->
+  <img id="logo" src="https://github.com/mattscianna/mattscianna/blob/Main/Copy_of_Logo_1-2-removebg-preview.png?raw=true" alt="Matt Scianna Logo">
 
   <h1>MATT SCIANNA</h1>
   <h2>FOOTBALL JERSEYS</h2>
@@ -160,8 +204,20 @@
 
   <!-- Footer Section -->
   <footer>
-    <p>&copy; 2025 Matt Scianna ©. All rights reserved. | <a href="/terms">Terms & Conditions</a> | <a href="/privacy">Privacy Policy</a></p>
+    <p>&copy; 2025 Matt Scianna. All rights reserved.</p>
+    <p>Not yet copyrighted.</p>
   </footer>
+
+  <!-- Terms & Conditions -->
+  <div class="terms">
+    <p>By using this site, you agree to our <a href="#">Terms & Conditions</a>.</p>
+  </div>
+
+  <!-- Social Media Icons -->
+  <div class="social-media">
+    <a href="https://www.instagram.com/yourusername" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram"></a>
+    <a href="https://www.tiktok.com/@yourusername" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/6/66/TikTok_logo_2021.svg" alt="TikTok"></a>
+  </div>
 
 </body>
 </html>
