--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 
   <!-- Importing Cardo font from Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Cardo&display=swap" rel="stylesheet">
-
+  
   <style>
     /* Use @font-face to load the Jersey 25 font (upload the font file to your repo) */
     @font-face {
       font-family: 'Jersey25';
-      src: url('fonts/jersey-25.ttf') format('truetype');
+      src: url('fonts/jersey-25.ttf') format('truetype'); /* Make sure the path is correct */
       font-weight: normal;
       font-style: normal;
     }
@@ -33,27 +33,30 @@
 
     h1 {
       font-family: 'Cardo', serif;
-      font-size: 36px;
+      font-size: 48px;
       margin-bottom: 10px;
     }
 
+    /* FOOTBALL JERSEYS in Jersey 25 font */
     h2 {
       font-family: 'Jersey25', sans-serif;
-      font-size: 36px;
-      margin-bottom: 30px;
-      letter-spacing: 1px;
+      font-size: 40px;
+      margin-bottom: 40px;
+      letter-spacing: 2px;
     }
 
     /* Styling for the logo */
     #logo {
-      width: 180px;
+      width: 200px;
+      height: auto;
       margin-bottom: 20px;
     }
 
+    /* Styling for countdown */
     #countdown {
       display: flex;
+      gap: 40px;
       justify-content: center;
-      gap: 30px;
       margin-top: 20px;
     }
 
@@ -70,78 +73,73 @@
     }
 
     .time-section .label {
-      font-family: 'Jersey25', sans-serif;
-      font-size: 16px;
+      font-size: 18px;
+      letter-spacing: 1px;
       color: black;
+      font-weight: bold;
     }
 
-    /* Styles for the footer */
-    footer {
-      margin-top: 40px;
-      font-size: 14px;
-      color: #000000;
+    /* Styling for footer */
+    .footer {
+      background-color: #8B0000;
+      color: white;
+      padding: 20px;
+      width: 100%;
       text-align: center;
+      margin-top: 50px;
     }
 
-    footer p {
-      margin: 5px;
-    }
-
-    /* Terms & conditions box style */
-    .terms {
+    /* Styling for copyright box */
+    .copyright-box {
+      background-color: #8B0000;
+      color: white;
+      padding: 10px;
+      margin-top: 10px;
       font-size: 14px;
-      margin-top: 15px;
-      color: #333;
-      text-align: center;
+      display: inline-block;
     }
 
-    /* Social media icons */
-    .social-media {
+    /* Make sure the footer links align correctly */
+    .footer-links {
       display: flex;
       justify-content: center;
       gap: 20px;
-      margin-top: 20px;
     }
 
-    .social-media img {
-      width: 50px;
-      height: 50px;
-      cursor: pointer;
+    .footer-links a {
+      color: white;
+      text-decoration: none;
+      font-size: 18px;
     }
-
-    /* Media query for mobile */
+    
+    /* Responsive design for mobile */
     @media (max-width: 768px) {
       h1 {
-        font-size: 28px;
+        font-size: 36px;
       }
 
       h2 {
         font-size: 28px;
       }
 
-      #countdown {
-        flex-direction: column;
-        gap: 15px;
-      }
-
       .time-section .number {
-        font-size: 36px;
+        font-size: 32px;
       }
 
-      footer {
-        font-size: 12px;
+      .footer {
+        padding: 10px;
       }
-
-      .social-media img {
-        width: 40px;
-        height: 40px;
+      
+      /* Space out and make footer elements fit */
+      .footer-links a {
+        font-size: 16px;
       }
     }
   </style>
 </head>
 <body>
 
-  <!-- Your Logo -->
+  <!-- Your Logo (replace with your actual logo file path) -->
   <img id="logo" src="https://github.com/mattscianna/mattscianna/blob/Main/Copy_of_Logo_1-2-removebg-preview.png?raw=true" alt="Matt Scianna Logo">
 
   <h1>MATT SCIANNA</h1>
@@ -203,20 +201,16 @@
   </script>
 
   <!-- Footer Section -->
-  <footer>
-    <p>&copy; 2025 Matt Scianna. All rights reserved.</p>
-    <p>Not yet copyrighted.</p>
-  </footer>
+  <div class="footer">
+    <div class="footer-links">
+      <!-- Add your own social media links here -->
+      <a href="#" target="_blank">Instagram</a>
+      <a href="#" target="_blank">TikTok</a>
+    </div>
 
-  <!-- Terms & Conditions -->
-  <div class="terms">
-    <p>By using this site, you agree to our <a href="#">Terms & Conditions</a>.</p>
-  </div>
-
-  <!-- Social Media Icons -->
-  <div class="social-media">
-    <a href="https://www.instagram.com/yourusername" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram"></a>
-    <a href="https://www.tiktok.com/@yourusername" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/6/66/TikTok_logo_2021.svg" alt="TikTok"></a>
+    <div class="copyright-box">
+      &copy; 2025 Matt Scianna. All Rights Reserved.
+    </div>
   </div>
 
 </body>
