--- a/index.html
+++ b/index.html
@@ -106,10 +106,20 @@
       gap: 20px;
     }
 
-    .footer-links a {
-      color: white;
-      text-decoration: none;
-      font-size: 18px;
+    /* Styling for image boxes (Instagram & TikTok) */
+    .social-media-box {
+      width: 40px; /* Adjust to your preferred size */
+      height: 40px;
+      margin-top: 20px;
+      border-radius: 10px;
+      overflow: hidden;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    }
+
+    .social-media-box img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
     
     /* Responsive design for mobile */
@@ -203,9 +213,13 @@
   <!-- Footer Section -->
   <div class="footer">
     <div class="footer-links">
-      <!-- Add your own social media links here -->
-      <a href="#" target="_blank">Instagram</a>
-      <a href="#" target="_blank">TikTok</a>
+      <!-- Instagram and TikTok icons as images -->
+      <div class="social-media-box">
+        <img src="your-instagram-image-url.png" alt="Instagram">
+      </div>
+      <div class="social-media-box">
+        <img src="your-tiktok-image-url.png" alt="TikTok">
+      </div>
     </div>
 
     <div class="copyright-box">
