--- a/index.html
+++ b/index.html
@@ -213,12 +213,14 @@
   <!-- Footer Section -->
   <div class="footer">
     <div class="footer-links">
-      <!-- Instagram and TikTok icons as images -->
+      <!-- Instagram and TikTok image boxes -->
       <div class="social-media-box">
-        <img src="your-instagram-image-url.png" alt="Instagram">
+        <!-- Replace 'your-instagram-image-url.png' with your actual Instagram image URL -->
+        <img src="https://github.com/mattscianna/mattscianna/blob/Main/IMG_0739.png?raw=true" alt="Instagram">
       </div>
       <div class="social-media-box">
-        <img src="your-tiktok-image-url.png" alt="TikTok">
+        <!-- Replace 'your-tiktok-image-url.png' with your actual TikTok image URL -->
+        <img src="https://github.com/mattscianna/mattscianna/blob/Main/IMG_0738.png?raw=true" alt="TikTok">
       </div>
     </div>
 
