--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
 
     #countdown {
       display: flex;
-      gap: 60px;
+      gap: 40px;
       margin-top: 20px;
+      justify-content: center; /* This centers the countdown on the page */
     }
 
     .time-section {
@@ -125,18 +126,21 @@
     </div>
   </div>
 
-  <!-- Instagram Link -->
-  <div class="social-media-box">
-    <a href="https://www.instagram.com/mattsciannany" target="_blank">
-      <img src="https://github.com/mattscianna/mattscianna/blob/Main/6E28D2AD-2C95-4CDB-B305-129399199A32.png?raw=true" alt="Instagram Logo">
-    </a>
-  </div>
+  <!-- Social Media Links with Image Boxes -->
+  <div style="display: flex; justify-content: center; gap: 20px; margin-top: 30px;">
+    <!-- Instagram Link -->
+    <div class="social-media-box">
+      <a href="https://www.instagram.com/yourusername" target="_blank">
+        <img src="your-instagram-image-link.jpg" alt="Instagram Logo">
+      </a>
+    </div>
 
-  <!-- TikTok Link -->
-  <div class="social-media-box">
-    <a href="https://www.tiktok.com/@mattsciannany" target="_blank">
-      <img src="https://github.com/mattscianna/mattscianna/blob/Main/72B6FE7C-B07D-4701-BDDA-F002443A82E6.png?raw=true" alt="TikTok Logo">
-    </a>
+    <!-- TikTok Link -->
+    <div class="social-media-box">
+      <a href="https://www.tiktok.com/@yourusername" target="_blank">
+        <img src="your-tiktok-image-link.jpg" alt="TikTok Logo">
+      </a>
+    </div>
   </div>
 
   <!-- Footer Section -->
