--- a/index.html
+++ b/index.html
@@ -76,26 +76,32 @@
       margin-top: 5px;
     }
 
-    /* Styling for Social Media Boxes */
+    /* Footer Section */
+    footer {
+      margin-top: 50px;
+      padding: 20px;
+      background-color: #8B0000;
+      color: white;
+      width: 100%;
+      text-align: center;
+    }
+
+    /* Styling for Social Media Boxes inside the footer */
+    .social-media-container {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 20px;
+    }
+
     .social-media-box {
       display: inline-block;
-      margin: 10px;
     }
 
     .social-media-box img {
       width: 50px; /* Adjust image size */
       height: 50px;
       border-radius: 5px;
-    }
-
-    /* Footer Section */
-    footer {
-      margin-top: 50px;
-      padding: 10px;
-      background-color: #8B0000;
-      color: white;
-      width: 100%;
-      text-align: center;
     }
   </style>
 </head>
@@ -126,26 +132,26 @@
     </div>
   </div>
 
-  <!-- Social Media Links with Image Boxes -->
-  <div style="display: flex; justify-content: center; gap: 20px; margin-top: 30px;">
-    <!-- Instagram Link -->
-    <div class="social-media-box">
-      <a href="https://www.instagram.com/mattsciannany" target="_blank">
-        <img src="https://github.com/mattscianna/mattscianna/blob/Main/6E28D2AD-2C95-4CDB-B305-129399199A32.png?raw=true" alt="Instagram Logo">
-      </a>
-    </div>
-
-    <!-- TikTok Link -->
-    <div class="social-media-box">
-      <a href="https://www.tiktok.com/@mattsciannany" target="_blank">
-        <img src="https://github.com/mattscianna/mattscianna/blob/Main/72B6FE7C-B07D-4701-BDDA-F002443A82E6.png?raw=true" alt="TikTok Logo">
-      </a>
-    </div>
-  </div>
-
   <!-- Footer Section -->
   <footer>
-    <p>&copy; 2025 Matt Scianna. Based in New York.</p>
+    <p>&copy; 2025 Matt Scianna. All Rights Reserved.</p>
+
+    <!-- Social Media Links inside Footer Box -->
+    <div class="social-media-container">
+      <!-- Instagram Link -->
+      <div class="social-media-box">
+        <a href="https://www.instagram.com/mattsciannany" target="_blank">
+          <img src="https://github.com/mattscianna/mattscianna/blob/Main/6E28D2AD-2C95-4CDB-B305-129399199A32.png?raw=true" alt="Instagram Logo">
+        </a>
+      </div>
+
+      <!-- TikTok Link -->
+      <div class="social-media-box">
+        <a href="https://www.tiktok.com/@mattsciannany" target="_blank">
+          <img src="https://github.com/mattscianna/mattscianna/blob/Main/72B6FE7C-B07D-4701-BDDA-F002443A82E6.png?raw=true" alt="TikTok Logo">
+        </a>
+      </div>
+    </div>
   </footer>
 
   <script>
