--- a/index.html
+++ b/index.html
@@ -33,29 +33,28 @@
 
     h1 {
       font-family: 'Cardo', serif;
-      font-size: 48px;
+      font-size: 30px; /* Reduced font size */
       margin-bottom: 10px;
     }
 
-    /* FOOTBALL JERSEYS in Jersey 25 font */
     h2 {
-      font-family: 'Jersey25', sans-serif; /* Apply Jersey 25 font */
-      font-size: 48px;
+      font-family: 'Jersey25', sans-serif; 
+      font-size: 30px; /* Reduced font size */
       margin-bottom: 40px;
       letter-spacing: 2px;
     }
 
     /* Styling for the logo */
     #logo {
-      width: 200px; /* Adjust width as needed */
+      width: 160px; /* Adjust width as needed for mobile */
       margin-bottom: 20px;
     }
 
     #countdown {
       display: flex;
-      gap: 40px;
+      gap: 20px;
       margin-top: 20px;
-      justify-content: center; /* This centers the countdown on the page */
+      justify-content: center; /* Centers countdown */
     }
 
     .time-section {
@@ -65,15 +64,15 @@
     }
 
     .time-section .number {
-      font-size: 64px;
+      font-size: 36px; /* Reduced size */
       font-weight: bold;
-      margin-bottom: 10px;
+      margin-bottom: 5px;
     }
 
     .time-section .label {
-      font-size: 18px;
+      font-size: 14px; /* Reduced size */
       letter-spacing: 1px;
-      margin-top: 5px;
+      margin-top: 3px;
     }
 
     /* Footer Section */
@@ -99,9 +98,41 @@
     }
 
     .social-media-box img {
-      width: 50px; /* Adjust image size */
-      height: 50px;
+      width: 40px; /* Adjust image size for mobile */
+      height: 40px;
       border-radius: 5px;
+    }
+
+    /* Mobile responsiveness */
+    @media (max-width: 768px) {
+      h1, h2 {
+        font-size: 24px; /* Make heading font smaller for mobile */
+      }
+
+      #logo {
+        width: 140px; /* Make logo a bit smaller for mobile */
+      }
+
+      .time-section .number {
+        font-size: 30px; /* Smaller numbers for mobile */
+      }
+
+      .time-section .label {
+        font-size: 12px; /* Smaller labels for mobile */
+      }
+
+      .social-media-box img {
+        width: 40px; /* Social media icons scaled for mobile */
+        height: 40px;
+      }
+    }
+
+    /* Make countdown text fit well on mobile */
+    @media (max-width: 480px) {
+      #countdown {
+        flex-direction: column;
+        gap: 10px;
+      }
     }
   </style>
 </head>
